# moonshot-dashboard

./: .gitignore  ARCHITECTURE.org  CMakeLists.txt  LICENSE  README.org  THESIS.org  TODO.org  flake.nix  partitions.csv  read_monitor.sh  sdkconfig
components/lua_core/: CMakeLists.txt  lua_core.c
components/lua_core/include/: lua_core.h
components/lua_modules/: CMakeLists.txt  lua_display.c  lua_http.c  lua_i2c.c  lua_modules_init.c  lua_sys.c  lua_touch.c  lua_wifi.c
components/lua_modules/include/: lua_modules.h
components/rgb_display/: CMakeLists.txt  font_garamond.c  font_inter.c  fonts.c  rgb_display.c  rgb_draw.c
components/rgb_display/include/: fonts.h  rgb_display.h
config/: .env.example  config.lua  screens.lua
config/layouts/: default.lua  focus.lua  layout_grid.lua
config/themes/: cyberpunk.lua  minimal.lua  retro.lua
lua/: app.lua  moonshot.lua
lua/db/: db.lua
lua/plugins/: plugin_base.lua  plugins_init.lua  registry.lua
lua/plugins/builtin/btc/: btc.lua  btc_api.lua
lua/plugins/builtin/calendar/: calendar.lua
lua/plugins/builtin/clock/: clock.lua
lua/plugins/builtin/system/: system.lua
lua/plugins/builtin/todo/: todo.lua
lua/plugins/builtin/verse/: verse.lua
lua/plugins/builtin/weather/: icons.lua  weather.lua  weather_api.lua
lua/screen_manager/: screen_manager.lua
lua/store/: store.lua
lua/touch/: handler.lua  swipe.lua
lua/ui/: ui_base.lua  ui_init.lua
lua/ui/composite/: card.lua  header.lua  panel.lua  screen_indicator.lua  stat.lua
lua/ui/data/: chart.lua  list.lua  progress.lua  table.lua  value.lua
lua/ui/display/: badge.lua  divider.lua  heading.lua  icon.lua  text.lua
lua/ui/feedback/: error.lua  loading.lua
lua/ui/layout/: column.lua  container.lua  row.lua  spacer.lua  ui_grid.lua
main/: CMakeLists.txt  getenv.lua  main.c  main.lua
main/dashboard/: btc.lua  init.lua  main.lua  verse.lua  weather.lua
tools/: generate_font.lua
